--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,22 +12,25 @@ rand = "0.7.0"
 plotters = "^0.2.6"
 
 [[bin]]
-name = "rust-book-1-1"
+name = "rb-1-1"
 path = "src/rust-book/1.1.rs"
 # cargo run --bin rust-book-1-1
 
 [[bin]]
-name = "rust-book-1-2"
+name = "rb-1-2"
 path = "src/rust-book/1.2.rs"
 
 [[bin]]
-name = "rust-book-1-3"
+name = "rb-1-3"
 path = "src/rust-book/1.3.rs"
 
 [[bin]]
-name = "rust-book-2"
+name = "rb-2"
 path = "src/rust-book/2.rs"
 
+[[bin]]
+name = "rb-3-1"
+path = "src/rust-book/3.1.rs"
 
 [[bin]]
 name = "chart_plot"
