--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,5 +45,9 @@ name = "rb-3-4"
 path = "src/rust-book/3.4.rs"
 
 [[bin]]
+name = "rb-3-5"
+path = "src/rust-book/3.5.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
