--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,10 @@ name = "rb-3-5"
 path = "src/rust-book/3.5.rs"
 
 [[bin]]
+name = "rb-4-1"
+path = "src/rust-book/4.1.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
