--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,10 @@ name = "rb-4-1"
 path = "src/rust-book/4.1.rs"
 
 [[bin]]
+name = "rb-4-2"
+path = "src/rust-book/4.2.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
