--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,10 @@ name = "rb-4-3"
 path = "src/rust-book/4.3.rs"
 
 [[bin]]
+name = "rb-5-1"
+path = "src/rust-book/5.1.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
