--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,10 @@ name = "rb-5-2"
 path = "src/rust-book/5.2.rs"
 
 [[bin]]
+name = "rb-5-3"
+path = "src/rust-book/5.3.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
