--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,10 @@ name = "rb-6-1"
 path = "src/rust-book/6.1.rs"
 
 [[bin]]
+name = "rb-6-2"
+path = "src/rust-book/6.2.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
