--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,10 @@ name = "rb-6-2"
 path = "src/rust-book/6.2.rs"
 
 [[bin]]
+name = "rb-6-3"
+path = "src/rust-book/6.3.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
