--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,10 @@ name = "rb-6-3"
 path = "src/rust-book/6.3.rs"
 
 [[bin]]
+name = "rb-8-1"
+path = "src/rust-book/8.1.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
