--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,6 +97,10 @@ name = "rb-8-1"
 path = "src/rust-book/8.1.rs"
 
 [[bin]]
+name = "rb-8-2"
+path = "src/rust-book/8.2.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
