--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,6 +105,10 @@ name = "rb-8-3"
 path = "src/rust-book/8.3.rs"
 
 [[bin]]
+name = "rb-9-1"
+path = "src/rust-book/9.1.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
