--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,10 @@ name = "rb-9-1"
 path = "src/rust-book/9.1.rs"
 
 [[bin]]
+name = "rb-9-2"
+path = "src/rust-book/9.2.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
