--- a/Cargo.toml
+++ b/Cargo.toml
@@ -113,6 +113,10 @@ name = "rb-9-2"
 path = "src/rust-book/9.2.rs"
 
 [[bin]]
+name = "rb-9-3"
+path = "src/rust-book/9.3.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
