--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,9 @@ edition = "2018"
 bio = "0.28.2"
 rand = "0.7.0"
 plotters = "^0.2.6"
-
-[dependencies.gtk]
-version = "0.8.0"
-features = ["v3_16"]
-
-[dependencies.gio]
-version = "0.8.0"
-features = ["v2_44"]
+glib = "^0"
+gtk = "^0"
+gio = "^0"
 
 [[bin]]
 name = "rb-1-1"
@@ -121,9 +116,17 @@ name = "rb-10-1"
 path = "src/rust-book/10.1.rs"
 
 [[bin]]
+name = "rb-10-2"
+path = "src/rust-book/10.2.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
 [[bin]]
 name = "gtk_basic_example"
 path = "src/gtk/hello_world.rs"
+
+[[bin]]
+name = "text_viewer"
+path = "src/gtk/text_viewer.rs"
