--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,6 +120,10 @@ name = "rb-10-2"
 path = "src/rust-book/10.2.rs"
 
 [[bin]]
+name = "rb-10-3"
+path = "src/rust-book/10.3.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
