add 13.2.rs and update

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,6 +128,10 @@ name = "rb-13-1"
 path = "src/rust-book/13.1.rs"
 
 [[bin]]
+name = "rb-13-2"
+path = "src/rust-book/13.2.rs"
+
+[[bin]]
 name = "chart_plot"
 path = "src/plotters/main.rs"
 
