--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,12 @@ glib = "^0"
 gtk = "^0"
 gio = "^0"
 
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3
+
 [[bin]]
 name = "rb-1-1"
 path = "src/rust-book/1.1.rs"
